--- a/index.html
+++ b/index.html
@@ -2,11 +2,77 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=9;IE=10;IE=Edge,chrome=1"/>
     <title>GrandTheatre</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>вава</h1>
+    <header class="header">
+        <div class="header__wrap">
+            <div class="container">
+                <div class="menu">
+                    <div class="nav menu__nav">
+                        <a href="#" class="nav__item">Главная</a>
+                        <a href="#" class="nav__item">о театре</a>
+                        <a href="#" class="nav__item">Наши постановки</a>
+                        <a href="#" class="nav__item">партнеры театра</a>
+                        <a href="#" class="nav__item">контакты</a>
+                    </div>
+                    <div class="contact menu__contact">
+                        <a href="tel:+74951234567" class="phone contact__phone">+7 495 123-45-67</a>
+                    </div>
+                    <!-- /.phone menu__phone -->
+                    <!-- /.menu -->
+                </div>
+                <!-- /.menu -->
+            </div>
+            <!-- /.container -->
+        </div>
+        <div class="social header__social">
+            <span class="social__title">контактная информация</span>
+            <a href="#" class="social__link instagram">
+                <img src="img/instagram.svg" class="social__icon" alt="">
+            </a>
+            <a href="#" class="social__link facebook">
+                <img src="img/facebook.svg" class="social__icon" alt="">
+            </a>
+            <a href="#" class="social__link vk">
+                <img src="img/vk.svg" class="social__icon" alt="">
+            </a>
+            <a href="#" class="social__link youtube">
+                <img src="img/youtube.svg" class="social__icon" alt="">
+            </a>
+        </div>
+        <!-- /.social header__social -->
+       <div class="header__wrap">
+        <div class="container">
+            <div class="header__content">
+                <span class="title header__title">Большой театр</span>
+                <!-- /.title header__title -->
+                <span class="header__text">Большо́й теа́тр — петербургский театр, существовавший в 1784—1886 годах, с 1886 года — Петербургская консерватория. Первое постоянное в Санкт-Петербурге, крупнейшее в России и одно из крупнейших театральных зданий в Европе XVIII.</span>
+                <!-- /.header__text -->
+                <button class="button header__button">афиша</button>
+                <!-- /.button header__button -->
+            </div>
+            <!-- /.header__content -->
+            <div class="header__slider"></div>
+            <!-- /.header__slider -->
+        </div>
+       </div>
+       <!-- /.header__wrap -->
+        <!-- /.container -->
+    </header>
+    <main>
+        <section class="theater"></section>
+        <!-- /.theater -->
+        <section class="staging"></section>
+        <!-- /.staging -->
+        <section class="stars"></section>
+        <!-- /.stars -->
+        <section class="partners"></section>
+        <!-- /.partners -->
+    </main>
+    <footer class="footer"></footer>
 </body>
 </html>
