--- a/index.html
+++ b/index.html
@@ -47,17 +47,39 @@
         <!-- /.social header__social -->
        <div class="header__wrap">
         <div class="container">
-            <div class="header__content">
-                <span class="title header__title">Большой театр</span>
-                <!-- /.title header__title -->
-                <span class="header__text">Большо́й теа́тр — петербургский театр, существовавший в 1784—1886 годах, с 1886 года — Петербургская консерватория. Первое постоянное в Санкт-Петербурге, крупнейшее в России и одно из крупнейших театральных зданий в Европе XVIII.</span>
-                <!-- /.header__text -->
-                <button class="button header__button">афиша</button>
-                <!-- /.button header__button -->
+            <div class="header__wrapper">
+                <div class="header__content">
+                    <span class="title header__title">Большой театр</span>
+                    <!-- /.title header__title -->
+                    <span class="header__text">Большо́й теа́тр — петербургский театр, существовавший в 1784—1886 годах, с 1886 года — Петербургская консерватория. Первое постоянное в Санкт-Петербурге, крупнейшее в России и одно из крупнейших театральных зданий в Европе XVIII.</span>
+                    <!-- /.header__text -->
+                    <button class="button header__button">афиша</button>
+                    <!-- /.button header__button -->
+                </div>
+                <!-- /.header__content -->
+                <div class="header__slider">
+                    <div class="header__slider-item">
+                        <div class="header__slider-img">
+                            <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
+                            <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
+                        </div>
+                    </div>
+                    <div class="header__slider-item">
+                        <div class="header__slider-img">
+                            <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
+                            <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
+                        </div>
+                    </div>
+                    <div class="header__slider-item">
+                        <div class="header__slider-img">
+                            <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
+                            <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
+                        </div>
+                    </div>
+                </div>
+                <!-- /.header__slider -->
             </div>
-            <!-- /.header__content -->
-            <div class="header__slider"></div>
-            <!-- /.header__slider -->
+            <!-- /.wrapper -->
         </div>
        </div>
        <!-- /.header__wrap -->
