finish hero slider

--- a/index.html
+++ b/index.html
@@ -57,27 +57,29 @@
                     <!-- /.button header__button -->
                 </div>
                 <!-- /.header__content -->
-                <div class="header__slider">
-                    <div class="header__slider-item">
-                        <div class="header__slider-img">
-                            <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
-                            <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
+                <div class="header__wrap-slider">
+                    <div class="header__slider">
+                        <div class="header__slider-item">
+                            <div class="header__slider-img">
+                                <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
+                                <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
+                            </div>
+                        </div>
+                        <div class="header__slider-item">
+                            <div class="header__slider-img">
+                                <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
+                                <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
+                            </div>
+                        </div>
+                        <div class="header__slider-item">
+                            <div class="header__slider-img">
+                                <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
+                                <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
+                            </div>
                         </div>
                     </div>
-                    <div class="header__slider-item">
-                        <div class="header__slider-img">
-                            <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
-                            <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
-                        </div>
-                    </div>
-                    <div class="header__slider-item">
-                        <div class="header__slider-img">
-                            <img src="img/hero-slider.jpg" alt="" class="header__img-primary">
-                            <img src="img/hero-slider.jpg" alt="" class="header__img-secondary">
-                        </div>
-                    </div>
+                    <!-- /.header__slider -->
                 </div>
-                <!-- /.header__slider -->
             </div>
             <!-- /.wrapper -->
         </div>
@@ -96,5 +98,9 @@
         <!-- /.partners -->
     </main>
     <footer class="footer"></footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/slider.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
