create partners block

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <div class="container">
             <div class="header__wrapper">
                 <div class="header__content">
-                    <span class="title header__title">Большой театр</span>
-                    <!-- /.title header__title -->
+                    <span class="header__title">Большой театр</span>
+                    <!-- /header__title -->
                     <span class="header__text">Большо́й теа́тр — петербургский театр, существовавший в 1784—1886 годах, с 1886 года — Петербургская консерватория. Первое постоянное в Санкт-Петербурге, крупнейшее в России и одно из крупнейших театральных зданий в Европе XVIII.</span>
                     <!-- /.header__text -->
                     <button class="button header__button">афиша</button>
@@ -88,13 +88,94 @@
         <!-- /.container -->
     </header>
     <main>
-        <section class="theater"></section>
+        <section class="theater">
+                <div class="container">
+                    <h2 class="title theater__title">о театре</h2>
+                    <div class="theater__wrap">
+                        <div class="theater__description">
+                            <h3 class="theater__heading">Самый лучший театр СПБ</h3>
+                            <span class="theater__text">Как свидетельствуют архивные документы, первое каменное здание Большого театра начали возводить в 1775 году по проекту Антонио Ринальди. В дальнейшем, после того как Ринальди упал с лесов и не мог лично наблюдать за ходом работ, Екатерина II поручила немецкому театральному декоратору и архитектору Людвигу Филиппу Тишбейну создать новый проект театра, который и был воплощён архитекторами Ф. В. фон Бауром и М. А. Деденёвым. Открытие его состоялось в 1783 году, хотя, основываясь на других свидетельствах, годом открытия можно считать 1784 год.</span>
+                        </div>
+                        <!-- /.theater__description -->
+                        <div class="theater__icon">
+                            <h3 class="theater__heading">немного о цифрах</h3>
+                            <div class="theater__block">  
+                                <img src="img/chair-icon.svg" alt="" class="theater__chair-icon">
+                                <span class="theater__chair-text">1600 посадочный мест</span>
+                            </div>
+                            <div class="theater__block">  
+                                <img src="img/theater-icon.svg" alt="" class="theater__theater-icon">
+                                <span class="theater__chair-text">350 лет истории</span>
+                            </div>
+                        </div>
+                        <!-- /.theater__icon -->
+                        <div class="theater__img">
+                            <img src="img/theater-img.jpg" alt="" class="theater__image">
+                        </div>
+                        <!-- /.theater__img -->
+                    </div>
+                    <!-- /.theater__wrap -->
+                </div>
+                <!-- /.container -->
+        </section>
         <!-- /.theater -->
-        <section class="staging"></section>
+        <section class="staging">
+        </section>
         <!-- /.staging -->
-        <section class="stars"></section>
+        <section class="stars">
+            <div class="container">
+                <div class="stars__wrap">
+                    <div class="stars__years">
+                        <span class="stars__year">2018</span>
+                        <span class="stars__year">2019</span>
+                        <span class="stars__year">2020</span>
+                    </div>
+                    <!-- /.stars__year -->
+                    <div class="stars__text">
+                        <div class="stars__block">
+                            <img src="img/star.svg" alt="" class="stars__star">
+                            <img src="img/star.svg" alt="" class="stars__star">
+                            <img src="img/star.svg" alt="" class="stars__star">
+                            <img src="img/star.svg" alt="" class="stars__star">
+                            <img src="img/star.svg" alt="" class="stars__star">
+                        </div>
+                        <span class="stars__description">Лучший театр
+                            по&nbspмнению&nbspтеатральных критиков&nbspПарижа</span>
+                    </div>
+                    <!-- /.stars__text -->
+                </div>
+                <!-- /.stars__wrap -->
+            </div>
+            <!-- /.container -->
+        </section>
         <!-- /.stars -->
-        <section class="partners"></section>
+        <section class="partners">
+            <div class="container">
+                <h2 class="title partners__title">партнеры театра</h2>
+                <div class="partners__wrap">
+                    <div class="partners__slider">
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                    </div>
+                    <!-- /.partners__slider -->
+                </div>
+                <!-- /.partners__wrap -->
+            </div>
+            <!-- /.container -->
+        </section>
         <!-- /.partners -->
     </main>
     <footer class="footer"></footer>
