create footer section

--- a/index.html
+++ b/index.html
@@ -178,7 +178,40 @@
         </section>
         <!-- /.partners -->
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="container">
+            <h2 class="title footer__title">стать меценатом</h2>
+            <div class="footer__maecenas">
+                <div class="footer__contact">
+                    <span class="footer__phone">+7 (812) 123-45-55</span>
+                    <span class="footer__phone">+7 (812) 123-45-66</span>
+                    <span class="footer__phone">info@theater.ru</span>
+                    <span class="footer__phone">г. санкт-петербург, невский 140</span>
+                </div>
+                <div class="footer__wrap">
+                    <div class="footer__block-one">
+                        <div class="footer__input-group">
+                            <input type="text" name="userName" class="footer__input footer__input-top"  placeholder="Как вас зовут:">
+                            <input type="tel" name="userPhone" class=" footer__input"  placeholder="Ваш номер телефона:">
+                        </div>
+                        <div class="footer__input-group">
+                            <input type="text" name="userQuestion" class="footer__input footer__input-top" placeholder="Я хочу спросить:">
+                            <input type="email" name="userEmail" class="footer__input"  placeholder="Ваш Email:">
+                        </div>
+                        <div class="footer__input-group">
+                            <input type="text" name="userQuestion" class="footer__input footer__input--primary" placeholder="Я хочу спросить:">
+                        </div>
+                    </div>
+                    <div class="footer__block-two">
+                        <span class="footer__policy">* Ваши данные не будут переданы третьим лицам, 100% вероятность. Конфиденциальность мы гарантируем, и защищаем персональные данные согласно законку ФЗ-52.</span>
+                        <button class="footer__btn">отправить</button>
+                    </div>
+                </div>
+            </div>
+            <!-- /.footer__maecenas -->
+        </div>
+        <!-- /.container -->
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/slider.js"></script>
