create section footer

--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
                 </div>
                 <div class="footer__wrap">
                     <div class="footer__block-one">
-                        <div class="footer__input-group">
-                            <input type="text" name="userName" class="footer__input footer__input-top"  placeholder="Как вас зовут:">
-                            <input type="tel" name="userPhone" class=" footer__input"  placeholder="Ваш номер телефона:">
+                        <div class="footer__input-group footer__input-group--one">
+                            <input type="text" name="userName" class="footer__input footer__input-top"  placeholder="Имя">
+                            <input type="tel" name="userPhone" class=" footer__input"  placeholder="Телефон">
+                        </div>
+                        <div class="footer__input-group footer__input-group--one">
+                            <input type="text" name="userQuestion" class="footer__input footer__input-top" placeholder="Компания">
+                            <input type="email" name="userEmail" class="footer__input"  placeholder="E-mail">
                         </div>
                         <div class="footer__input-group">
-                            <input type="text" name="userQuestion" class="footer__input footer__input-top" placeholder="Я хочу спросить:">
-                            <input type="email" name="userEmail" class="footer__input"  placeholder="Ваш Email:">
-                        </div>
-                        <div class="footer__input-group">
-                            <input type="text" name="userQuestion" class="footer__input footer__input--primary" placeholder="Я хочу спросить:">
+                            <input type="text" name="userQuestion" class="footer__input footer__input--primary" placeholder="Сообщение">
                         </div>
                     </div>
                     <div class="footer__block-two">
@@ -209,6 +209,11 @@
                 </div>
             </div>
             <!-- /.footer__maecenas -->
+            <div class="footer__dev">     
+                <span class="footer__text">(с) Все права защищены. Большой театр. 2020</span>
+                <span class="footer__text">Разработано d-e-n.ru</span>      
+            </div>
+            <!-- /.footer__dev -->
         </div>
         <!-- /.container -->
     </footer>
