--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="header__content">
                     <span class="header__title">Большой театр</span>
                     <!-- /header__title -->
-                    <span class="header__text">Большо́й теа́тр — петербургский театр, существовавший в 1784—1886 годах, с 1886 года — Петербургская консерватория. Первое постоянное в Санкт-Петербурге, крупнейшее в России и одно из крупнейших театральных зданий в Европе XVIII.</span>
+                    <span class="header__text">Большо́й теа́тр — петербургский театр, существовавший в 1784—1886 годах, с 1886 года — Петербургская консерватория. Первое постоянное в Санкт&nbsp-&nbspПетербурге, крупнейшее в России и одно из крупнейших театральных зданий&nbspв&nbspЕвропе&nbspXVIII.</span>
                     <!-- /.header__text -->
                     <button class="button header__button">афиша</button>
                     <!-- /.button header__button -->
@@ -140,7 +140,7 @@
                             <img src="img/star.svg" alt="" class="stars__star">
                         </div>
                         <span class="stars__description">Лучший театр
-                            по&nbspмнению&nbspтеатральных критиков&nbspПарижа</span>
+                            по&nbspмнению&nbsp13&nbspкритиков Парижа</span>
                     </div>
                     <!-- /.stars__text -->
                 </div>
