fix partners slider

--- a/index.html
+++ b/index.html
@@ -169,6 +169,27 @@
                         <div class="partners__slider-item">
                             <img src="img/partners-img.svg" alt="" class="partners__slider-img">
                         </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
+                        <div class="partners__slider-item">
+                            <img src="img/partners-img.svg" alt="" class="partners__slider-img">
+                        </div>
                     </div>
                     <!-- /.partners__slider -->
                 </div>
