add color title

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <main>
         <section class="theater">
                 <div class="container">
-                    <h2 class="title theater__title">о театре</h2>
+                    <h2 class="title theater__title"><strong class="color">О</strong> театре</h2>
                     <div class="theater__wrap">
                         <div class="theater__description">
                             <h3 class="theater__heading">Самый лучший театр СПБ</h3>
@@ -101,11 +101,11 @@
                             <h3 class="theater__heading">немного о цифрах</h3>
                             <div class="theater__block">  
                                 <img src="img/chair-icon.svg" alt="" class="theater__chair-icon">
-                                <span class="theater__chair-text">1600 посадочный мест</span>
+                                <span class="theater__chair-text"><strong class="color">1600</strong> посадочный мест</span>
                             </div>
                             <div class="theater__block">  
                                 <img src="img/theater-icon.svg" alt="" class="theater__theater-icon">
-                                <span class="theater__chair-text">350 лет истории</span>
+                                <span class="theater__chair-text"><strong class="color">350</strong> лет истории</span>
                             </div>
                         </div>
                         <!-- /.theater__icon -->
@@ -151,7 +151,7 @@
         <!-- /.stars -->
         <section class="partners">
             <div class="container">
-                <h2 class="title partners__title">партнеры театра</h2>
+                <h2 class="title partners__title"><strong class="color">партнеры</strong> театра</h2>
                 <div class="partners__wrap">
                     <div class="partners__slider">
                         <div class="partners__slider-item">
@@ -201,7 +201,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <h2 class="title footer__title">стать меценатом</h2>
+            <h2 class="title footer__title"><strong class="color">стать</strong> меценатом</h2>
             <div class="footer__maecenas">
                 <div class="footer__contact">
                     <span class="footer__phone">+7 (812) 123-45-55</span>
