create staging section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,45 @@
         </section>
         <!-- /.theater -->
         <section class="staging">
+            <h2 class="title staging__title"><strong class="color">наши</strong>  постановки</h2>
+            <div class="staging__wrap">
+                <div class="staging__slider">
+                    <div class="staging__item">
+                        <img src="img/slider-1.png" alt="" class="staging__img">
+                    </div>
+                    <!-- /.staging__item -->
+                    <div class="staging__item">
+                        <img src="img/slider-2.png" alt="" class="staging__img">
+                    </div>
+                    <!-- /.staging__item -->
+                    <div class="staging__item">
+                        <img src="img/slider-3.png" alt="" class="staging__img">
+                    </div>
+                    <!-- /.staging__item -->
+                    <div class="staging__item">
+                        <img src="img/slider-4.png" alt="" class="staging__img">
+                    </div>
+                    <div class="staging__item">
+                        <img src="img/slider-1.png" alt="" class="staging__img">
+                    </div>
+                    <!-- /.staging__item -->
+                    <div class="staging__item">
+                        <img src="img/slider-2.png" alt="" class="staging__img">
+                    </div>
+                    <!-- /.staging__item -->
+                    <div class="staging__item">
+                        <img src="img/slider-3.png" alt="" class="staging__img">
+                    </div>
+                    <!-- /.staging__item -->
+                    <div class="staging__item">
+                        <img src="img/slider-4.png" alt="" class="staging__img">
+                    </div>
+                    <!-- /.staging__item -->
+                    <!-- /.staging__item -->
+                </div>
+                <!-- /.staging__slider -->
+            </div>
+            <!-- /.staging__wrap -->
         </section>
         <!-- /.staging -->
         <section class="stars">
