full pc version and pixel perfect

--- a/index.html
+++ b/index.html
@@ -125,36 +125,58 @@
                 <div class="staging__slider">
                     <div class="staging__item">
                         <img src="img/slider-1.png" alt="" class="staging__img">
+                        <a href="" class="staging__link"></a>
+                        <div class="staging__heading">ОСКАР 2020</div>
+                        <div class="staging__subtitle">сентябрь 2020</div>
                     </div>
                     <!-- /.staging__item -->
                     <div class="staging__item">
                         <img src="img/slider-2.png" alt="" class="staging__img">
+                        <a href="" class="staging__link"></a>
+                        <div class="staging__heading">ОСКАР 2020</div>
+                        <div class="staging__subtitle">сентябрь 2020</div>
                     </div>
                     <!-- /.staging__item -->
                     <div class="staging__item">
                         <img src="img/slider-3.png" alt="" class="staging__img">
+                        <a href="" class="staging__link"></a>
+                        <div class="staging__heading">золотой грамофон</div>
+                        <div class="staging__subtitle">июль 2020</div>
                     </div>
                     <!-- /.staging__item -->
                     <div class="staging__item">
                         <img src="img/slider-4.png" alt="" class="staging__img">
+                        <a href="" class="staging__link"></a>
+                        <div class="staging__heading">щелкунчик</div>
+                        <div class="staging__subtitle">май 2020</div>
                     </div>
                     <div class="staging__item">
                         <img src="img/slider-1.png" alt="" class="staging__img">
+                        <a href="" class="staging__link"></a>
+                        <div class="staging__heading">ОСКАР 2020</div>
+                        <div class="staging__subtitle">сентябрь 2020</div>
                     </div>
                     <!-- /.staging__item -->
                     <div class="staging__item">
                         <img src="img/slider-2.png" alt="" class="staging__img">
+                        <a href="" class="staging__link"></a>
+                        <div class="staging__heading">ОСКАР 2020</div>
+                        <div class="staging__subtitle">сентябрь 2020</div>
                     </div>
                     <!-- /.staging__item -->
                     <div class="staging__item">
                         <img src="img/slider-3.png" alt="" class="staging__img">
+                        <a href="" class="staging__link"></a>
+                        <div class="staging__heading">золотой грамофон</div>
+                        <div class="staging__subtitle">июль 2020</div>
                     </div>
                     <!-- /.staging__item -->
                     <div class="staging__item">
                         <img src="img/slider-4.png" alt="" class="staging__img">
+                        <a href="" class="staging__link"></a>
+                        <div class="staging__heading">щелкунчик</div>
+                        <div class="staging__subtitle">май 2020</div>
                     </div>
-                    <!-- /.staging__item -->
-                    <!-- /.staging__item -->
                 </div>
                 <!-- /.staging__slider -->
             </div>
