--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
         </section>
         <!-- /.theater -->
         <section class="staging">
-            <h2 class="title staging__title"><strong class="color">наши</strong>  постановки</h2>
+            <div class="staging__wrapper">
+                <h2 class="title staging__title"><strong class="color">наши</strong>  постановки</h2>
             <div class="staging__wrap">
                 <div class="staging__slider">
                     <div class="staging__item">
@@ -181,6 +182,7 @@
                 <!-- /.staging__slider -->
             </div>
             <!-- /.staging__wrap -->
+            </div>
         </section>
         <!-- /.staging -->
         <section class="stars">
@@ -201,7 +203,7 @@
                             <img src="img/star.svg" alt="" class="stars__star">
                         </div>
                         <span class="stars__description">Лучший театр
-                            по&nbspмнению&nbsp13&nbspкритиков Парижа</span>
+                            по&nbspмнению&nbsp13&nbspкритиков<br>Парижа</span>
                     </div>
                     <!-- /.stars__text -->
                 </div>
@@ -265,10 +267,14 @@
             <h2 class="title footer__title"><strong class="color">стать</strong> меценатом</h2>
             <div class="footer__maecenas">
                 <div class="footer__contact">
-                    <span class="footer__phone">+7 (812) 123-45-55</span>
+                    <div class="footer__phone-tel">
+                        <span class="footer__phone">+7 (812) 123-45-55</span>
                     <span class="footer__phone">+7 (812) 123-45-66</span>
-                    <span class="footer__phone">info@theater.ru</span>
+                    </div>
+                    <div class="footer__phone-text">
+                        <span class="footer__phone">info@theater.ru</span>
                     <span class="footer__phone">г. санкт-петербург, невский 140</span>
+                    </div>
                 </div>
                 <div class="footer__wrap">
                     <div class="footer__block-one">
