--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
                 <!-- /.menu -->
             </div>
             <!-- /.container -->
+            <div class="burger-menu">
+                <a href="" class="burger-menu__button">
+                    <span class="burger-menu__lines"></span>
+                </a>
+                <nav class="burger-menu__nav">
+                        
+                    <a href="" class="burger-menu__link">Главная</a>
+                    <a href="" class="burger-menu__link">о театре</a>
+                    <a href="" class="burger-menu__link">Наши постановки</a>
+                    <a href="" class="burger-menu__link">партнеры театра</a>
+                    <a href="" class="burger-menu__link">контакты</a>
+                        <div class="burger__block">
+                            <img src="img/facebook.svg" class="phone_icon">
+                            <img src="img/instagram.svg" class="phone_icon">
+                            <img src="img/youtube.svg" class="phone_icon">
+                            <img src="img/vk.svg" class="phone_icon"> 
+                        </div>
+                </nav>
+                <div class="burger-menu__overlay"></div>
+            </div>
         </div>
         <div class="social header__social">
             <span class="social__title">контактная информация</span>
