--- a/index.html
+++ b/index.html
@@ -121,13 +121,15 @@
                         <!-- /.theater__description -->
                         <div class="theater__icon">
                             <h3 class="theater__heading">немного о цифрах</h3>
-                            <div class="theater__block">  
-                                <img src="img/chair-icon.svg" alt="" class="theater__chair-icon">
-                                <span class="theater__chair-text"><strong class="color">1600</strong> посадочный мест</span>
-                            </div>
-                            <div class="theater__block">  
-                                <img src="img/theater-icon.svg" alt="" class="theater__theater-icon">
-                                <span class="theater__chair-text"><strong class="color">350</strong> лет истории</span>
+                            <div class="theater__block-wrap">
+                                <div class="theater__block theater__block-one">  
+                                    <img src="img/chair-icon.svg" alt="" class="theater__chair-icon">
+                                    <span class="theater__chair-text"><strong class="color">1600</strong> посадочный мест</span>
+                                </div>
+                                <div class="theater__block theater__block-two">  
+                                    <img src="img/theater-icon.svg" alt="" class="theater__theater-icon">
+                                    <span class="theater__chair-text"><strong class="color">350</strong> лет истории</span>
+                                </div>
                             </div>
                         </div>
                         <!-- /.theater__icon -->
