--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
         <!-- /.container -->
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="js/slick.js"></script>
     <script src="js/slider.js"></script>
     <script src="js/main.js"></script>
 </body>
